--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   http: ^0.13.5
   ssh2: ^2.2.3
   shared_preferences: ^2.0.15
+  animated_text_kit: ^4.2.2
 
 dev_dependencies:
   flutter_test:
@@ -67,6 +68,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/
+    - assets/logos/
+    - assets/icons/
+    - assets/images/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
