--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   ssh2: ^2.2.3
   shared_preferences: ^2.0.15
   animated_text_kit: ^4.2.2
+  path_provider: ^2.0.15
 
 dev_dependencies:
   flutter_test:
