--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   shared_preferences: ^2.0.15
   animated_text_kit: ^4.2.2
   path_provider: ^2.0.15
+  flutter_translate: ^4.0.4
 
 dev_dependencies:
   flutter_test:
