added settings screen

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  generate: true
 
   # To add assets to your application, add an assets section, like this:
   assets:
@@ -77,6 +78,8 @@ flutter:
     - assets/logos/
     - assets/icons/
     - assets/images/
+    - assets/i18n/
+    - assets/kml/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
