--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -81,6 +81,7 @@ flutter:
     - assets/images/help_view/
     - assets/images/lg_tasks_view/
     - assets/images/
+    - assets/images/settings_view/
     - assets/i18n/
     - assets/kml/
   #   - images/a_dot_burr.jpeg
