--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   localization: ^2.1.0
+  scroll_snap_list: ^0.5.1
 
 dev_dependencies:
   flutter_test:
