--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -4,6 +4,9 @@
         android:label="Rocket Launcher App"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
+       <meta-data android:name="com.google.android.geo.API_KEY"
+           android:value="AIzaSyByPl7Li6G7P94I4ewiGCDqEr29Jc87jj0"
+           />
         <activity
             android:name=".MainActivity"
             android:exported="true"
