--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
     sdk: flutter
   localization: ^2.1.0
   scroll_snap_list: ^0.5.1
+  google_maps_flutter: ^2.3.0
 
 dev_dependencies:
   flutter_test:
