--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -51,6 +51,7 @@ dependencies:
   scroll_snap_list: ^0.5.1
   google_maps_flutter: ^2.3.0
   font_awesome_flutter: ^10.4.0
+  date_range_picker: ^1.0.7
 
 dev_dependencies:
   flutter_test:
