--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,8 @@ dependencies:
   date_range_picker: ^1.0.7
   url_launcher: ^6.1.11
   carousel_slider: ^4.2.1
+  intl: ^0.17.0
+  timezone: ^0.9.2
 
 dev_dependencies:
   flutter_test:
