--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,7 @@ dependencies:
   carousel_slider: ^4.2.1
   intl: ^0.17.0
   timezone: ^0.9.2
+  flutter_riverpod: ^1.0.3+1
 
 dev_dependencies:
   flutter_test:
