fixed connection issue and migrated to dartssh2

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   google_fonts: ^3.0.1
   get: ^4.6.5
   http: ^0.13.5
-  ssh2: ^2.2.3
+#  ssh2: ^2.2.3
+  dartssh2: ^2.8.2
   shared_preferences: ^2.0.15
   animated_text_kit: ^4.2.2
   path_provider: ^2.0.15
