--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -3,7 +3,8 @@
    <application
         android:label="Rocket Launcher App"
         android:name="${applicationName}"
-        android:icon="@mipmap/ic_launcher">
+        android:icon="@mipmap/ic_launcher"
+        android:usesCleartextTraffic="true">
        <meta-data android:name="com.google.android.geo.API_KEY"
            android:value="AIzaSyByPl7Li6G7P94I4ewiGCDqEr29Jc87jj0"
            />
