--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -60,6 +60,8 @@ dependencies:
   flutter_riverpod: ^1.0.3+1
   permission_handler: ^10.4.3
   lecle_downloads_path_provider: ^0.0.2+8
+  flutter_cube: ^0.1.1
+  model_viewer_plus: ^1.5.1
 
 dev_dependencies:
   flutter_test:
@@ -99,7 +101,8 @@ flutter:
     - assets/images/inventory/
     - assets/images/
     - assets/rockets/
-    - assets/satellites/
+    - assets/satellites/starlink_spacex_satellite.glb
+    - assets/satellites/starlink_spacex_satellite.usdz
     - assets/i18n/
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
